@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-01T16:23:45Z",
-  "count" : 4,
-  "count_minmax" : [ 3, 4 ],
-  "count_decinc" : [ -0, +4 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-10-02T01:51:57Z",
+  "count" : 6,
+  "count_minmax" : [ 3, 6 ],
+  "count_decinc" : [ -0, +6 ],
+  "uniques" : 3,
+  "uniques_minmax" : [ 2, 3 ],
+  "uniques_decinc" : [ -0, +3 ]
 }
