@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-09-17T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-09-18T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-10-01T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 6,
+      "uniques": 3
     }
   ]
 }
