@@ -1,3 +1,11 @@
+2022-10-02T01:51:57Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3166940078
+* notice: last 14d: unq all: 4 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 318 552 / 336 587
+* notice: next accum: outdated-unq outdated-all / unq all: 320 555 / 337 590
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +6 -0 -0 / 3 6
+* notice: removed / changed dates: [2022-09-17] / [2022-10-01]
+
 2022-10-01T16:23:45Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3165289802
 * notice: last 14d: unq all: 4 35
